add npm build script

--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "npm_transpile": "SET NODE_ENV=production& babel src/component --out-dir dist"
   },
   "jest": {
     "collectCoverageFrom": [
