Add demo website

--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "react-image-upload",
   "version": "0.1.0",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/baaraak/react-image-upload.git"
+  },
   "dependencies": {
     "autoprefixer": "7.1.1",
     "babel-core": "6.25.0",
@@ -35,6 +39,7 @@
     "react-dom": "^15.6.1",
     "react-error-overlay": "^1.0.9",
     "react-flip-move": "^2.9.14",
+    "react-syntax-highlighter": "^5.6.2",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.3",
     "url-loader": "0.5.9",
