Update package bugs

--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "npm_transpile": "SET NODE_ENV=production& babel src/component --out-dir dist"
+    "npmBuild": "SET NODE_ENV=production& babel src/component --out-dir dist"
   },
   "jest": {
     "collectCoverageFrom": [
