--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-images-upload",
+  "name": "react-images-upload-demo",
   "version": "0.1.0",
   "private": true,
   "repository": {
