--- a/src/component/package.json
+++ b/src/component/package.json
@@ -15,5 +15,11 @@
 	  "build": "node scripts/build.js",
 	  "test": "node scripts/test.js --env=jsdom",
 	  "npm_transpile": "SET NODE_ENV=production& babel src/component --out-dir dist"
-  }
+  },
+  "keywords": [
+    "image",
+    "upload",
+    "file"
+    "react image upload",
+  ]
 }
