--- a/src/component/package.json
+++ b/src/component/package.json
@@ -1,10 +1,10 @@
 {
   "name": "react-images-upload",
-  "version": "1.0.5",
+  "version": "1.0.7",
   "private": false,
   "repository": {
 	  "type": "git",
-	  "url": "git://github.com/jakehartnell/react-image-upload.git"
+	  "url": "https://github.com/jakehartnell/react-image-upload"
   },
   "dependencies": {
 	  "react": "^16.2.0",
@@ -19,7 +19,8 @@
   "keywords": [
     "image",
     "upload",
-    "file"
-    "react image upload",
-  ]
+    "file",
+    "react image upload"
+  ],
+  "license": "MIT"
 }
