--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,13 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/dist
+node_modules
 .idea
 # testing
 /coverage
 
 # production
-/build
+build
 
 # misc
 .DS_Store
