--- a/package.json
+++ b/package.json
@@ -1,98 +1,35 @@
 {
   "name": "react-images-upload-demo",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "private": true,
   "repository": {
     "type": "git",
-    "url": "git://github.com/baaraak/react-images-upload.git"
+    "url": "https://github.com/jakehartnell/react-images-upload"
   },
   "dependencies": {
-    "autoprefixer": "8.0.0",
-    "babel-core": "6.26.0",
-    "babel-eslint": "8.2.1",
-    "babel-jest": "22.2.2",
-    "babel-loader": "7.1.2",
-    "babel-preset-react-app": "^3.0.1",
-    "babel-runtime": "6.26.0",
-    "case-sensitive-paths-webpack-plugin": "2.1.1",
-    "chalk": "2.3.1",
-    "css-loader": "0.28.9",
-    "dotenv": "5.0.0",
-    "eslint": "4.18.0",
-    "eslint-config-react-app": "^2.1.0",
-    "eslint-loader": "1.9.0",
-    "eslint-plugin-flowtype": "2.44.0",
-    "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-jsx-a11y": "6.0.3",
-    "eslint-plugin-react": "7.6.1",
-    "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.6",
-    "fs-extra": "5.0.0",
-    "html-webpack-plugin": "2.30.1",
-    "jest": "22.3.0",
-    "object-assign": "4.1.1",
-    "postcss-flexbugs-fixes": "3.3.0",
-    "postcss-loader": "2.1.0",
-    "promise": "8.0.1",
-    "react": "^16.2.0",
-    "react-dev-utils": "^5.0.0",
-    "react-dom": "^16.2.0",
-    "react-error-overlay": "^1.0.9",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
     "react-flip-move": "^3.0.1",
-    "react-syntax-highlighter": "^5.6.2",
-    "style-loader": "0.20.2",
-    "sw-precache-webpack-plugin": "0.11.4",
-    "url-loader": "0.6.2",
-    "webpack": "3.11.0",
-    "webpack-dev-server": "2.11.1",
-    "webpack-manifest-plugin": "1.3.2",
-    "whatwg-fetch": "2.0.3"
+    "react-scripts": "1.1.4",
+    "react-syntax-highlighter": "^7.0.4"
   },
-  "devDependencies": {},
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom",
-    "npmBuild": "SET NODE_ENV=production& babel src/component --out-dir dist"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx}"
-    ],
-    "setupFiles": [
-      "<rootDir>/config/polyfills.js"
-    ],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.js?(x)",
-      "<rootDir>/src/**/?(*.)(spec|test).js?(x)"
-    ],
-    "testEnvironment": "node",
-    "testURL": "http://localhost",
-    "transform": {
-      "^.+\\.(js|jsx)$": "<rootDir>/node_modules/babel-jest",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$"
-    ],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "json",
-      "web.jsx",
-      "jsx"
-    ]
-  },
-  "babel": {
-    "presets": [
-      "react-app"
-    ]
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.11",
+    "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^0.21.0",
+    "webpack": "^4.8.3",
+    "webpack-cli": "^2.1.3",
+    "webpack-dev-server": "^3.1.4"
   }
 }
