--- a/package.json
+++ b/package.json
@@ -2,18 +2,21 @@
   "name": "react-images-upload-demo",
   "version": "0.2.1",
   "private": true,
+  "homepage": "https://jakehartnell.github.io/react-images-upload/",
   "repository": {
     "type": "git",
     "url": "https://github.com/jakehartnell/react-images-upload"
   },
   "dependencies": {
-    "react": "^16.3.2",
-    "react-dom": "^16.3.3",
-    "react-flip-move": "^3.0.1",
-    "react-scripts": "1.1.4",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-flip-move": "^3.0.4",
+    "react-scripts": "^1.1.5",
     "react-syntax-highlighter": "^7.0.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
@@ -22,14 +25,16 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "gh-pages": "^2.2.0",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.21.0",
-    "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.3",
-    "webpack-dev-server": "^3.1.4"
+    "webpack": "^4.41.6",
+    "webpack-cli": "^2.1.5",
+    "webpack-dev-server": "^3.10.3"
   }
 }
