--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "url": "https://github.com/jakehartnell/react-images-upload"
   },
   "dependencies": {
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
     "react-flip-move": "^3.0.4",
     "react-scripts": "^1.1.5",
     "react-syntax-highlighter": "^7.0.4"
+  },
+  "peerDependencies": {
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   },
   "scripts": {
     "predeploy": "npm run build",
