--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-images-upload-demo",
+  "name": "react-images-upload",
   "version": "0.2.1",
-  "private": true,
+  "private": false,
   "homepage": "https://jakehartnell.github.io/react-images-upload/",
   "repository": {
     "type": "git",
