--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-images-upload-max",
+  "name": "react-images-upload-limit",
   "version": "0.2.1",
   "private": false,
   "homepage": "https://jakehartnell.github.io/react-images-upload/",
