--- a/src/component/package.json
+++ b/src/component/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "react-images-upload",
-  "version": "1.2.8",
+  "name": "@geraudwilling/react-images-upload",
+  "version": "1.2.9",
   "private": false,
   "main": "compiled.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jakehartnell/react-images-upload"
+    "url": "https://github.com/GeraudWilling/react-images-upload"
   },
   "dependencies": {
     "react": "^16.12.0",
@@ -26,7 +26,8 @@
     "image",
     "upload",
     "file",
-    "react image upload"
+    "react image upload",
+    "react image upload limit"
   ],
   "license": "MIT",
   "peerDependencies": {
