--- a/src/component/package.json
+++ b/src/component/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@geraudwilling/react-images-upload",
+  "name": "react-images-upload",
   "version": "1.3.0",
   "private": false,
   "main": "compiled.js",
