--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
+  "precommit":{
+    "tasks": ["npm build"]
+  },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
