--- a/src/component/package.json
+++ b/src/component/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "react-images-upload",
-  "version": "1.2.8",
+  "name": "@glaudsonsilva/react-images-upload",
+  "version": "1.2.9",
   "private": false,
   "main": "compiled.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jakehartnell/react-images-upload"
+    "url": "https://github.com/glaudsonsilva/react-images-upload"
   },
   "dependencies": {
     "react": "^16.12.0",
